detailled list of changes, please see ChangeLog.

1.26.1 (UNRELEASED):
--------------------
Bug fixes:
 - backends/packaging-apt-dpkg.py: Fix another test case failure when ddeb
   repository is not enabled.
 - backends/packaging-apt-dpkg.py: Fix handling of explicit cache directory
   name when it is a relative path.
 - launchpad.py: Only query for bugs after 2011-08-01, to avoid timeouts.

1.26 (2011-11-11):
------------------
Bug fixes:
 - backends/packaging-apt-dpkg.py: Port to current python-apt API.
 - hookutils.py: Fix path_to_key() to also work with unicode arguments.
 - test/crash: Exit successfully if apport is not enabled in the system. This
   allows packages to run the test suite during build.
 - report.py, add_proc_info(): Correctly handle "python -m <modulename>"
   programs as being interpreted and determine the appropriate module path.
 - Fix some import statements to also work for the system-installed test suite.
 - test/run: Fix testing data/general-hooks/parse_segv.py when called in
   system-installed mode.
 - apport/ui.py: Clean up test .crash file after test cases.
 - Fix tests when running as root.
 - setup.py: Fix crash when "javac -version" fails.
 - README: Update command for one-time enablement.
 - backends/packaging-apt-dpkg.py: Fix interleaving usage of install_packages()
   with other operations such as get_version(), by resetting the apt status
   after building and using the sandbox.
 - report.py test suite: Remove requirement that $USER is set, which makes it
   easier to run this from package build environments.
 - apport/ui.py, test/crash: Use "yes" as test process instead of "cat". The
   former is less likely to run already, and does not depend on having a stdin,
   so it runs better in test environments like autopkgtest.
 - backends/packaging-apt-dpkg.py: Fix tests if system does not have a dbgsym
   apt source.

Improvements:
 - Ignore a crash if gnome-session is running and says that the session is